Corousel Contents added...!!

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <span></span>
         </b>
         <div id="change-text">
-          8000 രൂപ മുതൽ എല്ലാത്തരം sofa aannu vekkendathu ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
+          Galaxy Furniture നിങ്ങൾക്കായി ഒരുക്കുന്നു വിശാലമായ കളക്ഷൻസ്. <br> 
+          എല്ലാത്തരം Wooden and Modern ഫർണീച്ചറുകൾ ഇനി ഒരു കുടകീഴിൽ.
         </div>
 
       </div>
