--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         </b>
         <div id="change-text">
           Galaxy Furniture നിങ്ങൾക്കായി ഒരുക്കുന്നു വിശാലമായ കളക്ഷൻസ്. <br> 
-          എല്ലാത്തരം Wooden and Modern ഫർണീച്ചറുകൾ ഇനി ഒരു കുടകീഴിൽ.
+          എല്ലാത്തരം Wooden and Modern ഫർണീച്ചറുകൾ ഇനി ഒരു കുടകീഴിൽ.<br>
+          5 വർഷ വാറണ്ടിയോടുകൂടി.
         </div>
 
       </div>
