--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
             <img class="d-block w-100" src="images/back2.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block text ">
               <h5>8000 onwards</h5>
-              <p>എല്ലാത്തരം sofa aannu vekkendathu ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
+              <p>എല്ലാത്തരം ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/back3.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block text ">
               <h5>17000 onwards</h5>
-              <p>എല്ലാത്തരം sofa aannu vekkendathu ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
+              <p>എല്ലാത്തരം ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/back4.jpg" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block text ">
+            <div class="carousel-caption d-none d-md-block text">
               <h5>20000 onwards</h5>
-              <p>എല്ലാത്തരം sofa aannu vekkendathu ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
+              <p>എല്ലാത്തരം ഫർണിച്ചറുകളുടെയും വിശാലമായ കളക്ഷൻസ്
             </div>
           </div>
         </div>
@@ -146,12 +146,11 @@
     <div class="box p-5">
       <div class="intro">
         <h2 class="text-center" style="text-shadow: 2px 2px 3px #7b188f;">GALLERY</h2>
-        <p class="text-center">Check our valuble products.</p>
+        <p class="text-center" style="text-shadow: 2px 2px 3px #000;">Check our valuble products</p>
       </div>
       <div class="row photos">
         <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
           <img class="img-fluid img-shadow" src="/images/sofa1.jpg" onclick="openModal();currentSlide(1)">
-
         </div>
         <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
           <img class="img-fluid img-shadow" src="/images/back3.jpg" onclick="openModal();currentSlide(2)">
@@ -174,7 +173,18 @@
         <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
           <img class="img-fluid img-shadow" src="/images/back3.jpg" onclick="openModal();currentSlide(8)">
         </div>
-
+        <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
+          <img class="img-fluid img-shadow" src="/images/back4.jpg" onclick="openModal();currentSlide(9)">
+        </div>
+        <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
+          <img class="img-fluid img-shadow" src="/images/back3.jpg" onclick="openModal();currentSlide(10)">
+        </div>
+        <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
+          <img class="img-fluid img-shadow" src="/images/back2.jpg" onclick="openModal();currentSlide(11)">
+        </div>
+        <div class="gallery col-sm-6 col-md-4 col-lg-3 item p-3">
+          <img class="img-fluid img-shadow" src="/images/sofa1.jpg" onclick="openModal();currentSlide(12)">
+        </div>
 
       </div>
 
@@ -185,42 +195,62 @@
           <!-- modal images are listed here    -->
 
           <div class="mySlides">
-            <div class="numbertext">1 / 8</div>
+            <div class="numbertext">1 / 12</div>
             <img src="images/sofa1.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">2 / 8</div>
+            <div class="numbertext">2 / 12</div>
             <img src="images/back3.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">3 / 8</div>
+            <div class="numbertext">3 / 12</div>
             <img src="images/back2.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">4 / 8</div>
+            <div class="numbertext">4 / 12</div>
             <img src="images/back4.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">5 / 8</div>
+            <div class="numbertext">5 / 12</div>
             <img src="images/back3.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">6 / 8</div>
+            <div class="numbertext">6 / 12</div>
             <img src="images/back2.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">7 / 8</div>
+            <div class="numbertext">7 / 12</div>
             <img src="images/back4.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">8 / 8</div>
+            <div class="numbertext">8 / 12</div>
+            <img src="images/back3.jpg" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">9 / 12</div>
+            <img src="images/back3.jpg" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">10 / 12</div>
+            <img src="images/back3.jpg" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">11 / 12</div>
+            <img src="images/back3.jpg" style="width:100%">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">12 / 12</div>
             <img src="images/back3.jpg" style="width:100%">
           </div>
 
