--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
           <div class="mySlides">
             <div class="numbertext">1 / 12</div>
             <img src="images/sofa1.jpg" style="width:100%">
+              <p class="text-white bg-info p-3">
+                Lorem ipsum dolor sit amet, consect...........Lorem ipsum dolor sit amet, consect...........Lorem ipsum dolor sit amet, consect...........
+              </p>
           </div>
 
           <div class="mySlides">
