Sitemap.xml and robots.txt added , Email changes to insta , SEO tags added..!!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#2b6777">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="robots" content="index, follow">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
@@ -326,11 +329,11 @@
             
           </div>
           <div class="col-sm-6">
-            <a href="mailto:pmuneer373@gmail.com" class="carda" style="text-decoration:none;">
+            <a href="https://www.instagram.com/galaxy_furniture_factory/" class="carda" style="text-decoration:none;">
               <div class="card text-light bg-info p-3 m-3 cazoom">
                 <div class="card-body">
-                  <h5 class="card-title">MAIL US</h5>
-                  <p class="card-text">pmuneer373@gmail.com</p>
+                  <h5 class="card-title">FOLLOW US</h5>
+                  <p class="card-text">@galaxy_furniture_factory</p>
                   
                 </div>
               </div>
