--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#2b6777">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Galaxy Furniture Factory in Kerala provides best quality wooden furniture with 5-years of warrandy , Here is the destination of your furniture dreams , We offers trendy and modern furnitures , Direct from company , Buy home and office furnitures , Buy furnitures best price avialable in Kerala , Branded furnitures , Furnitures with warrandy , Best furniture shop in Kerala , Best furniture company in Kerala , Furnitures with best offers , Best furnitures in Kerala , Best Furniture store , Best Furniture shop">
+  <meta name="keywords" content="Best Quality Furnitures , Trending ,Modern , Furniture Showroom , Furnitures in Kerala , Furniture Store , Furniture Shop , Wooden Furniture , Modern Furniture , Sofa , Low price Sofa , Low price Furniture , Furniture Showroom in Palakkad , Furniture Showroom in Thrissur ,Furniture Showroom in Malappuram , Customisable Furniture , Branded Furniture , Furniture with warrandy , Classic Furniture , Best Furniture , Best Furniture in Kerala , Best Furniture shop , Best Sofas , Sofa set , Home appliances">
   <meta name="robots" content="index, follow">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
