--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       
         
       <div class="card text-center">
-        <div class="card-header background-color">
+        <div class="card-header aboutcard">
           Featured
         </div>
         <div class="card-body bg-info">
