--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
     </div>
     <!--Gallery end-->
     <div class="contact-section">
-      <h2 style="text-shadow: 2px 2px 3px #7b188f;">MATERIALS</h2>
+      <h2 style="text-shadow: 2px 2px 3px #7b188f;">FEATURED IN</h2>
       <p>
         Woods Used : ഇരുൾ, ആഞ്ഞിലി(Chemicaled)
       </p>
       <p>
-        
+        Cloths Used : Jute(ചണം) , Moshi
       </p>
 
     </div>
