--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
                   <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62691.56812190243!2d76.11132117910158!3d10.870635799999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7c98dce26007f%3A0xc95e4557443b22e8!2sGalaxy%20furniture!5e0!3m2!1sen!2sin!4v1629625061727!5m2!1sen!2sin"
                     width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                  
                 </div>
               </div>
               <div>
-                <a href="https://api.whatsapp.com/send?phone=+917592845335&text=Hai we are checking..!" class="float"
+                <a href="https://api.whatsapp.com/send?phone=+917592845335&text=Hai,I need to know about your furniture works.." class="float"
                   target="_blank">
                   <i class="fa fa-whatsapp my-float"></i>
                 </a>
