Now everything Done yaar!!

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
         <section class="mb-4">
           <p>
-            മികവുറ്റത്തും പ്രൌടിയേറിയതുമായ നല്ല ഫർണിച്ചറുകൾക്ക് വേണ്ടി സന്ദർശിക്കുക.
+            മികവുറ്റത്തും പ്രൗഡിയേറിയതുമായ നല്ല ഫർണിച്ചറുകൾക്ക് വേണ്ടി സന്ദർശിക്കുക.
           </p>
         </section>
         <!-- Section: Text -->
